objects/BMCServiceDesk__Incident__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpIncident</customHelpPage>
    <description>This object allows you to store data for incidents.</description>
    <fields>
        <fullName>BMCRF_AutoAssign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag would govern whether the ticket would be reassigned to appropriate Queue or Service Desk Agent would reassign the ticket manually.</description>
        <label>Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_CCList__c</fullName>
        <description>This field would contain comma separated Login ID’s who get notifications on every update of Incident.There would be incident update trigger written to parse the CC list and send emails</description>
        <inlineHelpText>Use this field to enter the Login ID of the people whom you want to copy to this Ticket - user ids should be separated by commas</inlineHelpText>
        <label>CC List</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_CI_Site__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCRF_ComputerSystem_Site__c + &quot; -- &quot;  + BMCServiceDesk__FKBMC_BaseElement__r.BMCRF_ComputerSystem_Room__c  + &quot; -- &quot; + BMCServiceDesk__FKBMC_BaseElement__r.BMCRF_ComputerSystem_Rack__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Category_Level_1__c</fullName>
        <description>This represent the topmost category.</description>
        <formula>IF(ISBLANK(BMCServiceDesk__FKCategory__r.BMCServiceDesk__FKParentCategory__r.BMCServiceDesk__parentCategory_Id__c) ,   BMCServiceDesk__FKCategory__r.BMCServiceDesk__parentCategory_Id__c , BMCServiceDesk__FKCategory__r.BMCServiceDesk__FKParentCategory__r.BMCServiceDesk__parentCategory_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Category_Level_2__c</fullName>
        <description>This represent the level to category.</description>
        <formula>BMCServiceDesk__FKCategory__r.BMCServiceDesk__parentCategory_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ClientDepartment__c</fullName>
        <description>This field will capture the Client&apos;s Department.</description>
        <formula>BMCServiceDesk__FKClient__r.Department</formula>
        <label>Client Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ClientLocation__c</fullName>
        <label>Client Location</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ClientLogin__c</fullName>
        <description>This captures the Login ID of the client.</description>
        <formula>BMCServiceDesk__FKClient__r.Login__c</formula>
        <label>Client Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ClientPhone__c</fullName>
        <description>This phone will capture the client phone and will be displayed in the Remedyforce Console.</description>
        <formula>BMCServiceDesk__Client_Phone__c</formula>
        <label>Client Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Client_Building_Name__c</fullName>
        <description>It Stores the value of Client&apos;s Building Name</description>
        <label>Client Building Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_Client_Location__c</fullName>
        <formula>BMCRF_ClientLocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Closed_Date__c</fullName>
        <formula>BMCServiceDesk__closeDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Created_By__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Custom_Due_Date_Progress__c</fullName>
        <formula>IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__Status_ID__c !=&apos;RESOLVED&apos;, BMCServiceDesk__dueDateTime__c &lt; NOW()), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_red.gif&quot;, &quot;Due date of a record has passed&quot;), 
IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__Status_ID__c !=&apos;RESOLVED&apos;, BMCServiceDesk__Time_Remaining_Percentage__c &gt; 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_green.gif&quot;, &quot;More than 50% of time is remaining in the due date&quot;), 
IF(AND(BMCServiceDesk__state__c, BMCServiceDesk__Status_ID__c !=&apos;RESOLVED&apos;, BMCServiceDesk__Time_Remaining_Percentage__c &lt;= 50), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/light_yellow.gif&quot;, &quot;Less than or equal to 50% of time is remaining in the due date&quot;), 
IF((((BMCServiceDesk__state__c || !BMCServiceDesk__state__c) &amp;&amp; BMCServiceDesk__Status_ID__c =&apos;RESOLVED&apos; &amp;&amp; BMCRF_ResolvedDate__c &lt;= BMCServiceDesk__dueDateTime__c) || 
(!BMCServiceDesk__state__c &amp;&amp; (BMCServiceDesk__Status_ID__c =&apos;CLOSED&apos; ||BMCServiceDesk__Status_ID__c =&apos;CANCELLED&apos;) &amp;&amp; BMCRF_ResolvedDate__c &lt;= BMCServiceDesk__dueDateTime__c )), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_confirm16.gif&quot;, &quot;Due date met&quot;), 
IF((((BMCServiceDesk__state__c || !BMCServiceDesk__state__c) &amp;&amp; BMCServiceDesk__Status_ID__c =&apos;RESOLVED&apos; &amp;&amp; BMCRF_ResolvedDate__c &gt; BMCServiceDesk__dueDateTime__c) || 
(!BMCServiceDesk__state__c &amp;&amp; (BMCServiceDesk__Status_ID__c =&apos;CLOSED&apos; ||BMCServiceDesk__Status_ID__c =&apos;CANCELLED&apos;) &amp;&amp; BMCRF_ResolvedDate__c &gt; BMCServiceDesk__dueDateTime__c)), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/permissions_deny16.gif&quot;, &quot;Due date is not met&quot;), &apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Days_for_SLA_Breach__c</fullName>
        <description>Stores  the value of Days for SLA Breach</description>
        <formula>IF (( BMCServiceDesk__Status_ID__c = &apos;RESOLVED&apos; || BMCServiceDesk__Status_ID__c = &apos;CLOSED&apos; ) ,(BMCServiceDesk__dueDateTime__c - BMCRF_ResolvedDate__c), (BMCServiceDesk__dueDateTime__c - NOW()))</formula>
        <label>Days for SLA Breach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCRF_Dept_Manager_2__c</fullName>
        <formula>BMCServiceDesk__FKOpenBy__r.WD_EMT2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Manager 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Due_Date__c</fullName>
        <formula>BMCServiceDesk__dueDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
	    <fields>
        <fullName>BMCRF_Staff_Assigned_Date__c</fullName>
        <description>Will update value when staff is assigned to ticket</description>
        <label>Staff Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Entire_Tree__c</fullName>
        <formula>if( BMCRF_Category_Level_1__c =  BMCRF_Category_Level_2__c,
BMCRF_Category_Level_1__c + &apos;--&gt;&apos; + BMCServiceDesk__Category_ID__c , BMCRF_Category_Level_1__c + &apos;--&gt;&apos; +  BMCRF_Category_Level_2__c + &apos;--&gt;&apos; +  BMCServiceDesk__Category_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMCRF Entire Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ExternalID__c</fullName>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ExternalReferenceID__c</fullName>
        <description>This field will store the external reference id of avaya.</description>
        <label>External Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Fin_Description__c</fullName>
        <label>Fin Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_Fin_Resolution__c</fullName>
        <label>Fin Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_Global_HRBP__c</fullName>
        <label>Global HRBP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_HR_Client_Manager__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.WD_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_HR_Confidential__c</fullName>
        <label>Confidential Benefits</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_HR_Description__c</fullName>
        <label>HR Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_HR_Estimated_End_Date__c</fullName>
        <inlineHelpText>This field is applicable only when the status is PENDING</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_HR_Resolution__c</fullName>
        <label>HR Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_KnowledgeArticleUsed__c</fullName>
        <label>Knowledge Article Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCRF_LastModifiedCount__c</fullName>
        <formula>Today() - DateValue( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCRF_MisQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mis Queued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_Notes__c</fullName>
        <description>Field is to map incident details into it.</description>
        <label>Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_Office_Number__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Office_Number__c + &quot; ( Phone : &quot; + BMCServiceDesk__Client_Phone__c + &quot; )&quot;</formula>
        <label>Office Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_OpenDays__c</fullName>
        <description>Stores the opendays of ticket</description>
        <formula>If(IsNull(BMCRF_Resolved_Date__c), 
CASE(MOD( DateValue(BMCServiceDesk__openDateTime__c) - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - DateValue(BMCServiceDesk__openDateTime__c) )/7)*5-1), 
CASE(MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c),7), 0 ,  
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( DateValue(BMCRF_Resolved_Date__c) - DateValue(BMCServiceDesk__openDateTime__c) )/7)*5-1))</formula>
        <label>OpenDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCRF_Open_Days_in_Minutes__c</fullName>
        <description>Ticket Open days in Days and Minutes</description>
        <formula>IF (ISBLANK(BMCRF_Resolved_Date__c)  ,
TEXT(FLOOR( (NOW()  -  BMCServiceDesk__openDateTime__c))) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * ( (NOW()  -  BMCServiceDesk__openDateTime__c) - FLOOR(NOW()  -  BMCServiceDesk__openDateTime__c) ))) &amp; &quot; hours &quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( (NOW()  -  BMCServiceDesk__openDateTime__c) - FLOOR(NOW()  -  BMCServiceDesk__openDateTime__c) ),8) - FLOOR(
ROUND( 24 * ( (NOW()  -  BMCServiceDesk__openDateTime__c) - FLOOR(NOW()  -  BMCServiceDesk__openDateTime__c) ),8))),0)) &amp; &quot; min &quot;,

IF (NOT(ISBLANK(BMCRF_Resolved_Date__c)) ,
TEXT(FLOOR( ( BMCRF_Resolved_Date__c -  BMCServiceDesk__openDateTime__c))) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * ( (BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) ))) &amp; &quot; hours &quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( (BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) ),8) - FLOOR(
ROUND( 24 * ( (BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c  -  BMCServiceDesk__openDateTime__c) ),8)) ),0)) &amp; &quot; min &quot;
,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Days in Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Opened_Date__c</fullName>
        <formula>BMCServiceDesk__openDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Organization_Unit__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Organization_Unit__c</formula>
        <label>Organization Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_PendingReason__c</fullName>
        <description>This field will be mandatory when the status of the Incident ticket is set to Pending.</description>
        <label>Pending Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Completion of Child Ticket</fullName>
                </value>
                <value>
                    <fullName>Completion of Problem Record</fullName>
                </value>
                <value>
                    <fullName>Hardware Arrival</fullName>
                </value>
                <value>
                    <fullName>Hardware Provisioning</fullName>
                </value>
                <value>
                    <fullName>Secure Data Setup and Delete</fullName>
                </value>
                <value>
                    <fullName>Software Deployment</fullName>
                </value>
                <value>
                    <fullName>Software License</fullName>
                </value>
                <value>
                    <fullName>Software Purchase</fullName>
                </value>
                <value>
                    <fullName>System Install</fullName>
                </value>
                <value>
                    <fullName>System Recovery</fullName>
                </value>
                <value>
                    <fullName>Waiting for Customer response</fullName>
                </value>
                <value>
                    <fullName>Waiting on Task Completion</fullName>
                </value>
                <value>
                    <fullName>Waiting on Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCRF_Pending_Reason_New__c</fullName>
        <formula>BMCRF_Pending_Reason__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Pending_Reason__c</fullName>
        <label>Pending Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Profile_Name_Of_Created_By_User__c</fullName>
        <description>Capture Profile Name Of Created By User.</description>
        <label>Profile Name Of Created By User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCRF_QueueAssignedDateTime__c</fullName>
        <label>QueueAssignedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_QueueAssignedDays__c</fullName>
        <formula>if (BMCServiceDesk__FKOpenBy__c = null , NOW() - BMCRF_QueueAssignedDateTime__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QueueAssignedDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCRF_Queue__c</fullName>
        <formula>BMCServiceDesk__queueName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_RelatedPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there any related PR</description>
        <label>BMCRF_RelatedPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_Resolution_Time__c</fullName>
        <description>Resolution Time</description>
        <formula>IF ( ( BMCRF_Resolved_Date__c  - BMCServiceDesk__openDateTime__c) &gt; 0, 
TEXT(FLOOR( (BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c))) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( (BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( (BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) ),8) - FLOOR( 
ROUND( 24 * ( (BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) - FLOOR(BMCRF_Resolved_Date__c - BMCServiceDesk__openDateTime__c) ),8)) ),0)) &amp; &quot; min &quot;
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_ResolvedDate__c</fullName>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Resolved_Date__c</fullName>
        <formula>BMCRF_ResolvedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Responded_Date__c</fullName>
        <formula>BMCServiceDesk__respondedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_SRD_OR_Template__c</fullName>
        <formula>if( BMCServiceDesk__FKRequestDefinition__c &lt;&gt; NULL ,
 BMCServiceDesk__FKRequestDefinition__r.Name ,
  BMCServiceDesk__FKTemplate__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRD OR Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Severity_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Severity Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_Staff_Login__c</fullName>
        <formula>BMCServiceDesk__FKOpenBy__r.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Staff_Manager_1__c</fullName>
        <formula>BMCServiceDesk__FKOpenBy__r.WD_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Manager 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Start_Pause__c</fullName>
        <description>Store the datetimevalue when ticket goes to pending status</description>
        <label>Start Pause</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_StopPause__c</fullName>
        <description>Store the datetimevalue when ticket goes from pending status to other status</description>
        <label>StopPause</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCRF_Suppress_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suppress emails for termination tickets</description>
        <inlineHelpText>Suppress emails for termination tickets</inlineHelpText>
        <label>BMCRF_Suppress_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_TemporaryPurpose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used as criteria for pause date  in workflow BMCRF_SetStopPauseDate</description>
        <label>TemporaryPurpose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCRF_TicketType__c</fullName>
        <defaultValue>&quot;IT&quot;</defaultValue>
        <description>This would capture the appropriate department wise ticket and sharing settings would be created as per this field.</description>
        <label>Ticket Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_TotalPendingDays__c</fullName>
        <description>Stores the total pending days of ticket</description>
        <formula>if(  ISNULL(BMCRF_StopPause__c), (NOW()- BMCRF_Start_Pause__c) * 24* 60 ,  (BMCRF_StopPause__c- BMCRF_Start_Pause__c)*24*60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pending Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCRF_Update_Note__c</fullName>
        <description>This field would update the Notes.</description>
        <label>Update Note</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk_IntfFailure_Message__c</fullName>
        <label>InterfaceFailure_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACApprovalStatus__c</fullName>
        <label>BCM Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ACSeverity__c</fullName>
        <label>BCM Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Actual_Outage_Time_Hours__c</fullName>
        <formula>BMCServiceDesk__actualOutageDuration__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Outage Time (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
        <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
        <label>Additional email information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate the workflow for sending email to Incident owner. The value is toggled to True if the last value was False to activate field update.</description>
        <label>All Tasks Closed Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approval_Status__c</fullName>
        <description>Displayed in the Tickets and Requests list view only if added to the Self Service: View Tickets and Requests field set.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_ID__c</fullName>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the incident&apos;s category. Categories allow you to classify the incident using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Account__c</fullName>
        <formula>BMCServiceDesk__FKAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the account of the client who submitted the incident.</inlineHelpText>
        <label>Account~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Phone__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Clock_Status__c</fullName>
        <formula>IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c== true &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c ==  true, $Label.bmcservicedesk__clockstatusrunning, IF( BMCServiceDesk__FKStatus__r.BMCServiceDesk__workStatus__c == false &amp;&amp; BMCServiceDesk__FKStatus__r.BMCServiceDesk__state__c==true,$Label.bmcservicedesk__clockstatuspaused,$Label.bmcservicedesk__clockstatusstopped))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the clock that is used to calculate the actual work time for an incident.</inlineHelpText>
        <label>Work Clock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_By__c</fullName>
        <formula>BMCServiceDesk__FKClosedBy__r.Username</formula>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unable to reproduce</fullName>
                </value>
                <value>
                    <fullName>Unable to solve or in conflict with standards or policy</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by requester</fullName>
                </value>
                <value>
                    <fullName>Workaround</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliant__c</fullName>
        <description>To check if the Incident is closed before due date or not.</description>
        <formula>IF(ISNULL(BMCServiceDesk__dueDateTime__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__closeDateTime__c), ( IF(BMCServiceDesk__dueDateTime__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__dueDateTime__c &gt;= BMCServiceDesk__closeDateTime__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliments_and_Complaints__c</fullName>
        <label>Compliments and Complaints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Deep_View__c</fullName>
        <formula>HYPERLINK(&quot;../apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmartView</label>
        <type>Text</type>
    </fields>
</CustomObject>